vlib/v/checker/tests/method_op_alias_err.out
vlib/v/checker/tests/method_op_alias_err.vv:4:1: error: both sides of an operator must be the same type
    2 | type Foo2 = string
    3 | 
    4 | fn (f Foo) + (f1 Foo2) Foo2 {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    5 |     return Foo2(f + f1)
    6 | }
vlib/v/checker/tests/method_op_alias_err.vv:5:19: error: infix expr: cannot use `string` (right expression) as `string`
    3 | 
    4 | fn (f Foo) + (f1 Foo2) Foo2 {
    5 |     return Foo2(f + f1)
      |                   ^
    6 | }
    7 |
vlib/v/checker/tests/method_op_alias_err.vv:10:6: error: mismatched types `Foo` and `string`
    8 | fn main() {
    9 |    mut f := Foo('fg')
   10 |    f += 'fg'
      |      ~~
   11 |    f -= Foo('fo') 
   12 |     println(f)
vlib/v/checker/tests/method_op_alias_err.vv:11:6: error: operation `Foo` - `Foo` does not exist, please define it
    9 |    mut f := Foo('fg')
   10 |    f += 'fg'
   11 |    f -= Foo('fo') 
      |      ~~
   12 |     println(f)
   13 | }
