vlib/v/checker/tests/method_op_alias_err.vv
type Foo = string 
type Foo2 = string

fn (f Foo) + (f1 Foo2) Foo2 {
    return Foo2(f + f1)
}

fn main() {
   mut f := Foo('fg')
   f += 'fg'
   f -= Foo('fo') 
    println(f)
}
